Added opportunity to create new folders on the server, solved some bugs